<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >
    
    <FrameLayout 
        android:id="@+id/fileManager_title"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="@android:color/holo_blue_light"
        >
        <TextView 
            android:id="@+id/fileManager_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filemanagerTitle"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <Button 
            android:id="@+id/fileManager_title_newDirectory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filemanagerNewDirectory"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            />
    </FrameLayout>
	
    <ListView
        android:id="@+id/fileManager_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/fileManager_title"
        android:layout_above="@+id/fileManager_toolbar"
        >
        
    </ListView>
    
    <RelativeLayout
        android:id="@+id/fileManager_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tools_back"
        >
        <TextView 
            android:id="@+id/fileManager_toolbar_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            />
        <TextView 
            android:id="@+id/fileManager_toolbar_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
    
</RelativeLayout>
